sgt-28 xxs breakpoint font change to fix wrapping issue

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -113,6 +113,9 @@ body {
         @media(max-width: $screen-xs-max) {
           font-size: 26px;
         }
+        @media(max-width: $screen-xs-min) {
+          font-size: 23px;
+        }
       }
     }
   }
